# bsv-rust-sdk

./: .gitignore  .ref  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-types/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-interface-traits/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-remittancemanager/: 03-02-SUMMARY.md  03-03-SUMMARY.md
.planning/phases/04-basic-brc29-module/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-integrationtests-parityfixes/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-04-SUMMARY.md
.planning/phases/05.1-ts-sdk-parity-fixes/: 05.1-02-SUMMARY.md
benches/: auth_message_bench.rs  dispatch_bench.rs
benchmarks/: compare.js
benchmarks/results/: comparison-report.md
docs/: STAS3_REMAINING_WORK.md  STAS3_SMOKE_HANDOVER.md  stas3-implementation-spec.md  wallet-interface-object-safety.md
examples/: address_from_wif.rs  certificate_operations.rs  create_hmac.rs  create_signature.rs  create_wallet.rs  ecies_encrypt.rs  encrypt_decrypt.rs  hd_key_derivation.rs  inscription_transaction.rs  keyshares_backup.rs  op_return_transaction.rs  p2pkh_transaction.rs  stas3_mainnet_smoke.rs  stas3_server.rs  token_lifecycle.rs  verify_beef.rs
src/: lib.rs
src/auth/: error.rs  mod.rs  peer.rs  session_manager.rs  types.rs
src/auth/certificates/: certificate.rs  compound.rs  master.rs  verifiable.rs
src/auth/clients/: auth_fetch.rs  mod.rs
src/auth/transports/: http.rs
src/auth/utils/: certificates.rs  nonce.rs
src/compat/: bip32.rs  bip39.rs  bsm.rs  ecies.rs
src/primitives/: aes.rs  aes_cbc.rs  aes_gcm.rs  base_point.rs  big_number.rs  drbg.rs  ecdsa.rs  hash.rs  key_shares.rs  point.rs  polynomial.rs  private_key.rs  public_key.rs  schnorr.rs  signature.rs  symmetric_key.rs  utils.rs
src/remittance/: comms_layer.rs  error.rs  identity_layer.rs  manager.rs  mod.rs  remittance_module.rs  types.rs
src/remittance/modules/: brc29.rs  mod.rs
src/script/: address.rs  bip276.rs  inscriptions.rs  op.rs  script.rs  script_chunk.rs  spend.rs  spend_ops.rs
src/script/templates/: mod.rs  p2pkh.rs  push_drop.rs  r_puzzle.rs
src/script/templates/stas3/: action_data.rs  brc43_key_args.rs  constants.rs  decode.rs  eac.rs  eac_template.rs  error.rs  flags.rs  key_triple.rs  lock.rs  mod.rs  multisig.rs  owner_address.rs  runar.rs  sighash.rs  spend_type.rs  stas3_body.asm  unlock.rs  verify.rs
src/script/templates/stas3/factory/: common.rs  confiscate.rs  freeze.rs  issue.rs  merge.rs  merge_chain.rs  mod.rs  pieces.rs  redeem.rs  split.rs  swap_cancel.rs  swap_execute.rs  swap_mark.rs  transfer.rs  types.rs  unfreeze.rs
src/script/templates/stas3/wallet/: custom_instructions.rs  mod.rs  ops_freeze.rs  ops_merge.rs  ops_mint.rs  ops_redeem.rs  ops_split.rs  ops_swap.rs  ops_top_up_fuel.rs  ops_transfer.rs
src/services/: mod.rs
src/services/identity/: contacts_manager.rs  identity_client.rs
src/services/kvstore/: global_kvstore.rs  interpreter.rs  local_kvstore.rs  types.rs
src/services/messages/: encrypted_message.rs  signed_message.rs
src/services/overlay_tools/: admin_token_template.rs  mod.rs  topic_broadcaster.rs  types.rs
src/services/registry/: registry_client.rs
src/services/storage/: storage_uploader.rs
src/transaction/: beef.rs  beef_party.rs  beef_tx.rs  broadcaster.rs  fee_model.rs  merkle_path.rs  transaction.rs  transaction_input.rs
src/transaction/broadcasters/: arc.rs  arcade.rs  mod.rs  util.rs  whats_on_chain.rs
src/wallet/: cached_key_deriver.rs  error.rs  interfaces.rs  key_deriver.rs  proto_wallet.rs  types.rs  validation.rs
src/wallet/serializer/: acquire_certificate.rs  create_action.rs  create_signature.rs  get_network.rs  internalize_action.rs  list_actions.rs  list_certificates.rs  mod.rs  verify_signature.rs
src/wallet/substrates/: http_wallet_json.rs  http_wallet_wire.rs  mod.rs  tests.rs  wallet_client.rs  wallet_wire_calls.rs  wallet_wire_processor.rs  wallet_wire_transceiver.rs
test-vectors/: cert_field_sort.json
tests/: conformance_builder.rs  conformance_vectors.rs  overlay_ad_parity.rs  pushdrop_ts_parity_probe.rs  remittance_brc29.rs  remittance_manager.rs  remittance_module.rs  remittance_traits.rs  remittance_types.rs  remittance_wire_format.rs  wallet_cached_key_deriver.rs  wallet_client.rs  wallet_proto_wallet.rs  wallet_serializer_vectors.rs
tests/fixtures/: builder-vectors.json
tests/vectors/: README.md  gen_op16_vector.mjs  gen_overlay_ad_vectors.mjs  gen_pushdrop_vectors.mjs
