[package]
name = "bsv-sdk"
version = "0.3.2"
edition = "2021"
rust-version = "1.87"
description = "Pure Rust implementation of the BSV Blockchain SDK"
license-file = "LICENSE"
repository = "https://github.com/b1narydt/bsv-rust-sdk"
readme = "README.md"
documentation = "https://docs.rs/bsv-sdk"
keywords = ["bsv", "bitcoin", "blockchain", "sdk", "cryptography"]
categories = ["cryptography", "authentication"]

[lib]
name = "bsv"

[dependencies]
getrandom = "0.2"
thiserror = "2.0"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# serde_json is a hard dep (not feature-gated) because the public
# `BroadcastFailure.more: Option<serde_json::Value>` field needs it.
# Cost is negligible (pure-Rust, ~100KB compiled).
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bignumber_bench"
harness = false

[[bench]]
name = "bn_serialization_bench"
harness = false

[[bench]]
name = "ecc_scalar_bench"
harness = false

[[bench]]
name = "script_findanddelete_bench"
harness = false

[[bench]]
name = "script_serialization_bench"
harness = false

[[bench]]
name = "symmetric_key_bench"
harness = false

[[bench]]
name = "transaction_bench"
harness = false

[[bench]]
name = "atomic_beef_bench"
harness = false

[[bench]]
name = "reader_writer_bench"
harness = false

[[bench]]
name = "ecdsa_bench"
harness = false

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "ecies_bench"
harness = false

[[bench]]
name = "dispatch_bench"
harness = false

[[bench]]
name = "auth_message_bench"
harness = false
required-features = ["network"]

[[example]]
name = "wallet_client_action"
required-features = ["network"]

[[example]]
name = "token_lifecycle"
required-features = ["network"]

[features]
default = []
# `serde` enables the type-level Serialize/Deserialize derives on wallet, cert,
# and remittance data types WITHOUT pulling the async network stack (tokio,
# reqwest, tokio-tungstenite, futures-util), so downstream crates can get the
# serde derives on wasm32 targets where those async deps don't compile.
serde = ["dep:serde"]
# `network` still transitively enables `serde`, so any existing
# `--features network` consumer is unchanged.
network = ["serde", "dep:tokio", "dep:reqwest", "dep:tokio-tungstenite", "dep:futures-util"]
# The SDK is entropy-backend-agnostic. On `wasm32-unknown-unknown` getrandom has
# no default entropy source, so the consumer MUST choose a backend: enable
# `wasm-js` for a browser / Node host (`crypto.getRandomValues`), or register a
# custom backend themselves (e.g. an enclave / WASI attested RNG). A library must
# not force the backend on downstream crates (per getrandom's own guidance).
wasm-js = ["getrandom/js"]
